--- a/src/js/styles/_reset.scss
+++ b/src/js/styles/_reset.scss
@@ -132,3 +132,11 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
