MOD: added login functionality

--- a/src/js/styles/main.scss
+++ b/src/js/styles/main.scss
@@ -1,6 +1,8 @@
 @import "./reset";
+@import "./variable";
 @import "./general";
 @import "./home";
 @import "./article";
 @import "./header";
 @import "./loader";
+@import "./sidebar";
