--- a/src/js/styles/_general.scss
+++ b/src/js/styles/_general.scss
@@ -19,7 +19,7 @@
 }
 
 .active {
-  color: green;
+  color: $primaryColor;
   outline: none;
   font-weight: 500;
   padding-top: 2px;
@@ -29,5 +29,11 @@
   color: white;
   outline: none;
   font-weight: 500;
-  background-color: rgba($color: green, $alpha: 0.5);
+  background-color: $primaryColor;
+}
+.primary-heading {
+  font-size: 2rem;
+  font-weight: 600;
+  color: $footerBgColor;
+  font-family: Arial, Helvetica, sans-serif;
 }
